# Generative-AI-Multi-Agent-System

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  langgraph.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data/seed/: generate_data.py  generate_pdfs.py  generate_test_files.py  index_documents.py  seed_database.py
scripts/: enhanced_rag_test.py  instrumented_test.py  quick_verify.py  setup.py  test_file_upload_e2e.py  ui_test_runner.py
src/: __init__.py  graph.py
src/agents/: general_agent.py  rag_agent.py  sql_agent.py  supervisor.py
src/config/: __init__.py  settings.py
src/db/: sql_database.py  vector_store.py
src/mcp_servers/: support_server.py
src/processing/: __init__.py  file_processor.py
src/prompts/: rag_agent.py  sql_agent.py  supervisor.py
src/state/: __init__.py  schemas.py
src/tools/: mcp_tools.py  retrieval_tools.py  sql_tools.py
test_uploads/: employee_handbook.txt  new_customers.csv  new_products.csv  new_tickets.csv
tests/: conftest.py  test_config.py  test_data_generation.py  test_file_processing.py  test_graph.py  test_mcp_server.py  test_rag_agent.py  test_ragas_evaluation.py  test_sql_agent.py  test_supervisor.py  test_user_scenarios.py
